--- a/Prelims_Jarme.html
+++ b/Prelims_Jarme.html
@@ -12,7 +12,7 @@
   <hr>
 
   <div>
-    <img src="my_photo.jpg" alt="my photo">
+    <img src="0.jpg" alt="my photo">
     <p><b>Address:</b> San Felipe, Naga City, Camarines Sur</p>
     <p><b>Phone:</b> 09621714086</p>
     <p><b>Email:</b> jjarme@gbox.adnu.edu.ph</p>
