--- a/Prelims_Jarme.html
+++ b/Prelims_Jarme.html
@@ -19,7 +19,8 @@
   </div>
 
   <h2>Personal Statement</h2>
-  <p><i>A person with a passion for leveraging technology to drive innovation and solve complex problems. Committed to contributing positively to dynamic projects and pursuing opportunities for personal and professional growth.</i></p>
+  <p><i>A person with a passion for leveraging technology to drive innovation and solve complex problems.<br>
+  Committed to contributing positively to dynamic projects and pursuing opportunities for personal and professional growth.</i></p>
 
   <h2>Education</h2>
   <ul>
