--- a/Prelims_Jarme.html
+++ b/Prelims_Jarme.html
@@ -3,7 +3,52 @@
 <head>
   <title>Jamie Jarme - Resume</title>
   <style>
-
+	body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+    }
+    h1 {
+      color: #333;
+      font-size: 28px;
+    }
+    h2 {
+      color: #555;
+      font-size: 24px;
+    }
+    h3 {
+      color: #777;
+      font-size: 20px;
+    }
+    p, li {
+      color: #666;
+      font-size: 16px;
+    }
+    img {
+      border-radius: 50%;
+      margin-right: 20px;
+    }
+    hr {
+      border: none;
+      border-top: 1px solid #ccc;
+      margin: 20px 0;
+    }
+    ul, ol {
+      padding-left: 20px;
+    }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+    }
+    th, td {
+      border: 1px solid #ddd;
+      padding: 8px;
+      text-align: left;
+    }
+    th {
+      background-color: #f2f2f2;
+    }
   </style>
 </head>
 <body>
